objects/User_Story__c.object
<CustomObject>
    <description>Agile form of requirements gathering</description>
    <fields>
        <fullName>Acceptance_Criteria_Status__c</fullName>
        <label>Acceptance Criteria Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apex_Code_Coverage__c</fullName>
        <label>Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories_BA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compliance_Criteria__c</fullName>
        <label>Compliance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Developer)</relationshipLabel>
        <relationshipName>User_Stories_developer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Specifications__c</fullName>
        <label>Functional Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Has_Apex_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Apex Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Types_in_Selection__c</fullName>
        <label>Metadata Types in Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomMetadata</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Apex_Code_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Minimum Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>User Stories (Org Credential)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Epic_Title__c</fullName>
        <formula>Epic__r.Epic_Title__c</formula>
        <label>Parent Epic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promote_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promote_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, a promotion and deployment of this User Story will be started.</inlineHelpText>
        <label>Promote and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promote_as_Single_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote as Single Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Test_Level__c</fullName>
        <label>Promotion Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                    <default>true</default>
                    <label>NoTestRun</label>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QR_Code__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&apos;+
  SUBSTITUTE(LEFT($Api.Partner_Server_URL_310, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)
  )+Id, 
    &apos;https://&apos;, 
    &apos;https%3A%2F%2F&apos;
  ),
&apos;Scan the QR code to create contact in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready for testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Points_Other__c</fullName>
        <label>Story Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story_Points_SFDC__c</fullName>
        <label>Story Points SFDC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Story_Points__c</fullName>
        <formula>Story_Points_SFDC__c+Story_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Story_Title__c</fullName>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View_in_Git__c</fullName>
        <formula>HYPERLINK(IF(AND(NOT(ISNULL(Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c )), Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c  != &apos;&apos;), Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c  + &apos;feature/&apos; + Name ,&apos;&apos;), &apos;feature/&apos; + Name)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <label>User Story</label>
    <nameField>
        <displayFormat>US-{0000000}</displayFormat>
        <label>User Story Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancellation_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  TEXT(Status__c)==&quot;Cancelled&quot;,
  ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>A cancellation reason must be given.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promote_User_Story_Apex_validation</fullName>
        <active>true</active>
        <description>If User Story has apex code, validate that the minimum code coverage has been met.</description>
        <errorConditionFormula>AND(
  Has_Apex_Code__c = true,
  PRIORVALUE(Promote_Change__c) = false, 
  Promote_Change__c = true,
  OR(
    ISNULL(Apex_Code_Coverage__c),
    ISNULL(Minimum_Apex_Code_Coverage__c),
    Apex_Code_Coverage__c &lt; Minimum_Apex_Code_Coverage__c
  )
)</errorConditionFormula>
        <errorMessage>This User Story does not meet the required Apex coverage threshold to be promoted.</errorMessage>
    </validationRules>
</CustomObject>